# pico

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  config.py  model.py  pyproject.toml  setup.sh  train.py  utils.py
configs/: demo.yaml  pico-large.yaml  pico-medium.yaml  pico-small.yaml  pico-tiny.yaml
scripts/: train.py
src/checkpointing/: __init__.py  evaluation.py  learning_dynamics.py  training.py
src/config/: __init__.py  _constants.py  checkpointing_config.py  data_config.py  evaluation_config.py  logging_config.py  model_config.py  monitoring_config.py  training_config.py
src/evaluation/: __init__.py
src/evaluation/tasks/: paloma.py
src/model/: __init__.py  pico.py
src/training/: trainer.py
src/training/utils/: __init__.py  data.py  initialization.py  io.py
utils/: __init__.py  checkpointing.py  evaluation.py  initialization.py
