[tool.poetry]
name = "pico"
version = "0.1.0"
description = "A framework for training small language models and analyzing their learning dynamics"
authors = ["Richard Diehl Martinez <richarddiehl@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
ray = "^2.35.0"
lightning = "^2.4.0"
omegaconf = "^2.3.0"
click = "^8.1.7"
wandb = "^0.18.1"
huggingface-hub = {extras = ["cli"], version = "^0.25.1"}

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
